slight style fixes regarding spacing in skills page

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -21,8 +21,9 @@
 }
 
 .front {
-  margin: 0 1rem 10rem 1rem;
+  margin: 0 1rem 4rem 1rem;
   height: calc(100vh - 16rem);
+  min-height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
